--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
     <div class="col-12" id="results">
 
     </div>
+    <div class="col-12 text-center" id="repo">
+      <a href="https://github.com/CubeNode/wiki-search">
+        <i class="fab fa-github"></i>github repository
+      </a>
+    </div>
   </div>
 </div>
 <script type="text/javascript" src="wiki-search.js"></script>
